deployment/school-dev-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: managex-school-dev
  namespace: dev-managex-school
  labels:
    app: managex-school-dev
spec:
  replicas: 1
  revisionHistoryLimit: 10
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
  selector:
    matchLabels:
      app: managex-school-dev
  template:
    metadata:
      labels:
        app: managex-school-dev
      annotations:
        kubernetes.io/change-cause: Update to 399600302704.dkr.ecr.ap-south-1.amazonaws.com/managex_school:dev-school-f483fbfd0e48508d5b693c58a6d4ee2e132209f2 - AI Report generation with bar chart impletemented
    spec:
      serviceAccountName: school-dev-service
      volumes:
        - name: school-secrets-dev
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "school-dev-secrets"
        - name: school-dev-nginx-configuration
          configMap:
            name: managex-school-dev-nginx-config
            items:
              - key: default
                path: default
        - name: cache
          emptyDir: {}
        - name: testing
          emptyDir: {}
        - name: sessions
          emptyDir: {}
        - name: views
          emptyDir: {}
        - name: tcpdf
          emptyDir: {}
        - name: pending-files
          emptyDir: {}
        - name: dev-efs-storage
          persistentVolumeClaim:
            claimName: managex-school-dev-pvc
      containers:
        - name: managex-school-dev
          image: 399600302704.dkr.ecr.ap-south-1.amazonaws.com/managex_school:dev-school-f483fbfd0e48508d5b693c58a6d4ee2e132209f2
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "500m"
              memory: 1Gi
            limits:
              cpu: 1
              memory: 2Gi
          ports:
            - containerPort: 80
          volumeMounts:
            - name: cache
              mountPath: /var/www/html/storage/framework/cache
            - name: sessions
              mountPath: /var/www/html/storage/framework/sessions
            - name: views
              mountPath: /var/www/html/storage/framework/views
            - name: testing
              mountPath: /var/www/html/storage/framework/testing
            - name: tcpdf
              mountPath: /var/www/html/storage/app/tcpdf
            - name: pending-files
              mountPath: /var/www/html/resources/pending-files
            - name: school-dev-nginx-configuration
              mountPath: /etc/nginx/sites-available/
            - name: dev-efs-storage
              mountPath: /var/www/html/storage/app/efs
            - name: dev-efs-storage
              mountPath: /var/www/html/storage/app/public
            - name: school-secrets-dev
              mountPath: "/mnt/secret-store"
              readOnly: true
          lifecycle:
            postStart:
              exec:
                command: ['cp', '-R', '/mnt/secret-store/.env', '/var/www/html/.env']
