deployment/school-stage-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: managex-school-stage
  namespace: stage-managex-school
  labels:
    app: managex-school-stage
spec:
  replicas: 2 # Increased replicas for higher availability
  revisionHistoryLimit: 10
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
  selector:
    matchLabels:
      app: managex-school-stage
  template:
    metadata:
      labels:
        app: managex-school-stage
    spec:
      serviceAccountName: school-stage-service # Using your existing service account
      volumes:
        - name: school-secrets-environment-file
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "school-stage-secrets"
        - name: school-stage-nginx-configuration
          configMap:
            name: managex-school-stage-nginx-config
            items:
              - key: default
                path: default
        - name: cache
          emptyDir: {}
        - name: testing
          emptyDir: {}
        - name: sessions
          emptyDir: {}
        - name: views
          emptyDir: {}
        - name: tcpdf
          emptyDir: {}
        - name: pending-files
          emptyDir: {}
        - name: stage-efs-storage
          persistentVolumeClaim:
            claimName: managex-school-stage-pvc
      containers:
        - name: managex-school-stg
          image: 399600302704.dkr.ecr.ap-south-1.amazonaws.com/stage-managex-school:stage-viewsonic-f5b3bfc9765a039187141d1d461abfd41e81ba02
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 1
              memory: 2Gi
            limits:
              cpu: 2
              memory: 4Gi
          volumeMounts:
            - name: cache
              mountPath: /var/www/html/storage/framework/cache
            - name: sessions
              mountPath: /var/www/html/storage/framework/sessions
            - name: views
              mountPath: /var/www/html/storage/framework/views
            - name: testing
              mountPath: /var/www/html/storage/framework/testing
            - name: tcpdf
              mountPath: /var/www/html/storage/app/tcpdf
            - name: pending-files
              mountPath: /var/www/html/resources/pending-files
            - name: school-stage-nginx-configuration
              mountPath: /etc/nginx/sites-available/
            - name: stage-efs-storage
              mountPath: /var/www/html/storage/app/efs
              subPath: efs # Added subPath to prevent overwriting if necessary
            - name: stage-efs-storage
              mountPath: /var/www/html/storage/app/public
              subPath: public # Added subPath
            - name: school-secrets-environment-file
              mountPath: "/mnt/secret-store/"
              readOnly: true
          lifecycle:
            postStart:
              exec:
                command: ['sh', '-c', 'cp /mnt/secret-store/.env /var/www/html/.env']
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
